# hybrid-trading-agent

./: .gitignore  README.md  pyproject.toml  run-collector.bat
docs/: RUNNING.md
docs/superpowers/plans/: 2026-06-04-jongga-phase01-backtest-gate.md
docs/superpowers/prereg/: 2026-06-04-phase1-gate-prereg.md  2026-06-05-forward-paper-prereg.md
docs/superpowers/specs/: 2026-06-01-manju-trading-agent-design.md  2026-06-03-jongga-closebet-agent-design.md  2026-06-04-jongga-forward-paper-design.md
jongga/: run_backtest.py  selector.py  universe.py
jongga/data/: cache.py  krx_provider.py  schema.py
jongga/factors/: chart.py
jongga/forward/: cli.py  paperbook.py  select.py  settle.py
jongga/gate/: drift.py  ic.py
manju/collector/: compact.py  keepawake.py  recorder.py  runner.py
manju/kis/: auth.py  constants.py
tests/: test_auth.py  test_compact.py  test_keepawake.py
tests/jongga/: test_cache.py  test_chart_factors.py  test_drift.py  test_ic.py  test_krx_provider.py  test_run_backtest.py  test_schema.py  test_universe.py
tests/jongga/forward/: test_paperbook.py  test_select_parse.py  test_settle.py
